<resources>
    <string name="app_name">moviles1</string>
    <string name="title_activity_barra_navegacion">barra_navegacion</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dulceria">Dulceria</string>
    <string name="usuario">Usuario</string>
    <string name="peliculas">Peliculas</string>
<<<<<<< HEAD
    <string name="inicio_sesion">Iniciar sesion</string>
    <string name="login">Continuar</string>
    <string name="forgot_password">Recuperar contraceña</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="username">Usuario</string>
    <string name="password">Contraceña</string>
    <string name="recuperacion">Recuperar cuenta</string>
    <string name="textinformacion">Escriba su email y numero de identificacion para recuperar la contraceña</string>
    <string name="cancelar">Cancelar</string>
    <string name="new_password">Escriba su nueva contraceña</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="email">Email</string>
    <string name="documento_identidad">Documento identidad</string>
    <string name="sexo">Sexo</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="register">Registrarse</string>
    <string name="descripcionitem">-2 GASEOSAS GRANDES\n-1 CRISPETAS GRANDES\n-2 PERROS CALIENTES \n-2 SNIKERS</string>
    <string name="combo">COMBO ALEGRIA</string>
    <string name="infoprice">Valor Combo $12.000 \n Cantidad disponible 30</string>
  <string name="descripcionitem">-2 GASEOSAS GRANDES\n-1 CRISPETAS GRANDES\n-2 PERROS CALIENTES \n-2 SNIKERS</string>
    <string name="combo">COMBO ALEGRIA</string>
    <string name="infoprice">Valor Combo $12.000 \n Cantidad disponible 30</string>
    <string name="compra">Comprar</string>
    <string name="botonBack">Inicio</string>
    <string name="botonSave">Guardar QR</string>
 <string name="title_activity_pelicula">pelicula</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_pestanas">pestanas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
=======
>>>>>>> parent of d0bb4dd... Mega comit :v
</resources>
