<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#262020"
    tools:context=".LoginActicity">

    <LinearLayout
        android:layout_width="159dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="0dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:src="@drawable/logo_cine" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="0dp"
        android:gravity="center_horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="20dp"
            android:text="@string/inicio_sesion"
            android:textColor="#ffffff"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/edtTxtUsrNm"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="#fff"
            android:hint="@string/username"
            android:inputType="text" />

        <EditText
            android:id="@+id/edtTxtPsswd"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="26dp"
            android:inputType="numberPassword"
            android:background="#fff"
            android:hint="@string/password"/>

        <Button
            android:layout_width="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="#fff"
            android:text="@string/login"
            android:onClick="onLogin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18dp"
            android:textColor="#ffffff"
            android:onClick="onRegister"
            android:layout_gravity="center_horizontal"
            android:text="@string/crear_cuenta"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18dp"
            android:textColor="#ffffff"
            android:onClick="onRecuperar"
            android:layout_gravity="center_horizontal"
            android:text="@string/forgot_password"/>
    </LinearLayout>



</LinearLayout>