<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#262020"
    tools:context=".newPassword">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="30dp"
            android:text="@string/recuperacion"
            android:textColor="#ffffff"
            android:textSize="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/new_password"
            android:textColor="#ffffff"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:orientation="vertical"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="0dp"
        android:gravity="center_horizontal"
        android:layout_weight="1">

        <EditText
            android:id="@+id/edtTxtnewPsswd3"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="26dp"
            android:inputType="numberPassword"
            android:background="#fff"
            android:hint="@string/new_password"/>

        <Button
            android:layout_width="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#fff"
            android:text="@string/login"
            android:onClick="onCambiarPsswd"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18dp"
            android:textColor="#ffffff"
            android:onClick="onCancelar"
            android:layout_gravity="center_horizontal"
            android:text="@string/cancelar"/>


    </LinearLayout>



</LinearLayout>