<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"

    android:layout_margin="0dp"

    android:background="#262020">


    <TextView
        android:id="@+id/combo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_margin="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/combo"
        android:textColor="#EC4545"
        android:textSize="30dp" />


    <ImageView
        android:id="@+id/imglogo"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/combo"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"

        android:foreground="@drawable/paquete"
        android:gravity="center"
        android:padding="0dp"
        android:src="@drawable/paquete"

        android:foreground="@drawable/combo"
        android:gravity="center"
        android:padding="0dp"
        android:src="@drawable/combo"

        tools:ignore="NotSibling" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_toRightOf="@+id/imglogo"
        android:gravity=""
        android:layout_below="@+id/combo"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/descripcionitem"
        android:textColor="#ffffff"
        android:textSize="15dp" />
    <TextView
        android:id="@+id/txtinfoprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="10dp"
        android:gravity=""
        android:layout_below="@+id/imglogo"
        android:layout_marginBottom="20dp"
        android:text="@string/infoprice"
        android:textColor="#ffffff"
        android:textSize="15dp" />
    <Button
        android:layout_width="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="30dp"
        android:layout_below="@+id/txtinfoprice"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="10dp"
        android:background="#259B24"
        android:text="@string/compra"
        />






</RelativeLayout>